--- a/index.html
+++ b/index.html
@@ -2,15 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>zlqp_blog</title>
     <style type="text/css">
         h1{
             text-align: center;
             font-size: 50px;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>Hello Github</h1>   
+
+<body style="color: white;">
+    
+    <h1>zlqp</h1>  
+    <h2>自我介绍</h2>
+    <p>我叫罗奋铉，20级计算机4班学生
+        喜欢运动，会玩游戏
+    </p>
+    <h2>技能介绍</h2>
+    <p>
+        <h4>具备的能力</h4> 
+        <p>对Go有一定基础，了解Gin框架和Gorm</p>    
+        <h4>自身的不足</h4>
+        <p>团队协作</p>
+        <p>实战能力</p>
+        <h4>感兴趣的方向</h4>
+        <p>人工智能，深度学习</p>
+    </p>
+    <h2>未来规划</h2>
+    <p>
+        大三上尽可能的完成一些自己以前一直想做的但还做的事
+    </p>
+    <p>
+        寒假开始备战考研
+    </p>
 </body>
 </html>
